tests/baselines/reference/interfacesWithPredefinedTypesAsNames.errors.txt
tests/cases/conformance/interfaces/interfaceDeclarations/interfacesWithPredefinedTypesAsNames.ts(1,11): error TS2427: Interface name cannot be 'any'
tests/cases/conformance/interfaces/interfaceDeclarations/interfacesWithPredefinedTypesAsNames.ts(2,11): error TS2427: Interface name cannot be 'number'
tests/cases/conformance/interfaces/interfaceDeclarations/interfacesWithPredefinedTypesAsNames.ts(3,11): error TS2427: Interface name cannot be 'string'
tests/cases/conformance/interfaces/interfaceDeclarations/interfacesWithPredefinedTypesAsNames.ts(4,11): error TS2427: Interface name cannot be 'boolean'
tests/cases/conformance/interfaces/interfaceDeclarations/interfacesWithPredefinedTypesAsNames.ts(5,11): error TS1003: Identifier expected.


==== tests/cases/conformance/interfaces/interfaceDeclarations/interfacesWithPredefinedTypesAsNames.ts (5 errors) ====
    interface any { }
              ~~~
!!! error TS2427: Interface name cannot be 'any'
    interface number { }
              ~~~~~~
!!! error TS2427: Interface name cannot be 'number'
    interface string { }
              ~~~~~~
!!! error TS2427: Interface name cannot be 'string'
    interface boolean { }
              ~~~~~~~
!!! error TS2427: Interface name cannot be 'boolean'
    interface void {}
              ~~~~
!!! error TS1003: Identifier expected.